[B]v1.0.3[/B]
- Default domain change to http://www.movix.me
- You can choose filter search to "All", "Movies" or "Series". 
- Added "Movies" and "Series" categories.
- Fix for "moovreel" and "filehoot" links
[B]v1.0.2[/B]
- Fix for watching series at auto play mode.
[B]v1.0.1[/B]
- Added missing categories.
- Auto play mode by default (can change at addon settings).
[B]v1.0.0[/B]
- Initial release